<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tv_ljwssjf">立即完善得积分</string>
    <string name="tv_wdqxda">我的求学档案</string>
    <string name="tv_wtx">未填写</string>
    <string name="tv_wdcj">我的成绩</string>
    <string name="qkankan">去看看</string>
    <string name="yhmbnwk">用户名不能为空！</string>
    <string name="mmgsbzq">密码格式不正确！</string>
    <string name="qsrzqdyhm">请输入正确的用户名!</string>
    <string name="usinghelp">使用帮助</string>

    <!-- TODO: Remove or change this placeholder single -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="head_portrait">头像</string>
    <string name="sex">性别</string>
    <string name="gkyear">高考年份</string>
    <string name="txt_exit">退出登录</string>
    <string name="personal_details">个人信息</string>
    <string name="todo">TODO</string>
    <string name="nick_name">昵称</string>
    <string name="kaishengclass">考生类型</string>
    <string name="ssgzhong">所属高中</string>
    <string name="weitian">未填</string>

    <!-- TODO: Remove or change this placeholder single -->

</resources>