<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="scoreInfo"
            type="com.qxb.student.common.module.bean.ScoreInfo" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/my_fraction"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:paddingLeft="@dimen/px_50">

                <LinearLayout
                    android:id="@+id/mine_linear_fraction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/px_25"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:text="@string/tv_wdcj"
                        android:textColor="#4681c4"
                        android:textSize="@dimen/px_45"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mine_linear_fraction"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/mine_tv_my_fraction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/px_30"
                        android:layout_marginEnd="@dimen/px_8"
                        android:layout_marginTop="@dimen/px_20"
                        android:text="@string/tv_wtx"
                        android:textColor="#808080"
                        android:textSize="@dimen/px_35" />

                    <TextView
                        android:id="@+id/mine_tv_fraction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/px_30"
                        android:layout_marginStart="@dimen/px_8"
                        android:layout_marginTop="@dimen/px_20"
                        android:textColor="#808080"
                        android:textSize="@dimen/px_35" />
                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="@dimen/px_2"
                android:layout_height="match_parent"
                android:background="@color/colorDivider" />

            <RelativeLayout
                android:id="@+id/mine_qiuxuedanan"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:paddingStart="@dimen/px_50">

                <LinearLayout
                    android:id="@+id/mine_linear_volunteer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/px_30"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/mine_tv_volunteer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:text="@string/tv_wdqxda"
                        android:textColor="#4681c4"
                        android:textSize="@dimen/px_45"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:src="@mipmap/newicon" />
                </LinearLayout>

                <TextView
                    android:id="@+id/mine_tv_my_volunteer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mine_linear_volunteer"
                    android:layout_marginBottom="@dimen/px_30"
                    android:layout_marginTop="@dimen/px_20"
                    android:text="@string/tv_ljwssjf"
                    android:textColor="#808080"
                    android:textSize="@dimen/px_35" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_2"
            android:background="@color/tv_line_color" />

    </LinearLayout>
</layout>
